# riscv_verilog

./: CMakeLists.txt  README.md  TODO.md  context.txt  pmt.py  promt.txt
rtl/: pipeline.sv
rtl/common/: alu_defines.svh  control_signals_defines.svh  defines.svh  immediate_types.svh  pipeline_types.svh  riscv_opcodes.svh
rtl/core/: alu.sv  control_unit.sv  data_memory.sv  decode.sv  ex_mem_register  execute.sv  fetch.sv  hazard_unit.sv  id_ex_register.sv  if_id_register.sv  immediate_generator.sv  instruction_memory.sv  mem_wb_register.sv  memory_stage.sv  pipeline_control.sv  register_file.sv  writeback_stage.sv
scripts/: compare_trace_files.py  setup.sh
tests/: CMakeLists.txt
tests/cosim_tests/: CMakeLists.txt  cosim_plugin.cpp  pipeline_cosim_tb.cpp
tests/integration/: CMakeLists.txt  addi_basic_expected.txt  addi_basic_instr.s  beq.s  beq_expected.txt  complex_expected.txt  hex_instr_mem.hex  jump.s  jump_expected.txt  mem.s  mem_expected.txt  pipeline_tb.cpp  simple_addi.s  simple_addi_expected_rf.txt
tests/scripts/: setup.sh
tests/unit/: CMakeLists.txt  alu.cpp  common_pipeline_types_tb.h  control_unit_tb.cpp  control_unit_tb.sv  data_memory_tb.cpp  data_memory_tb.sv  decode_tb.cpp  decode_tb.sv  execute_tb.cpp  execute_tb.sv  fetch_tb.cpp  fetch_tb.sv  immediate_generator_tb.cpp  immediate_generator_tb.sv  instruction_memory_tb.cpp  instruction_memory_tb.sv  memory_stage_tb.cpp  memory_stage_tb.sv  pipeline_control_tb.cpp  pipeline_control_tb.sv  pipeline_tb.cpp  pipeline_tb.sv  register_file_tb.cpp  register_file_tb.sv  writeback_stage_tb.cpp  writeback_stage_tb.sv
